[GGC-291] text alignment fixed

--- a/src/containers/strongSolution/StrongSolution.css
+++ b/src/containers/strongSolution/StrongSolution.css
@@ -23,7 +23,7 @@
   color: #c430c4;
   text-transform: uppercase;
   font-size: 22px;
-  min-height: 50px;
+  min-height: 64px;
 }
 
 .gg-section-container--strong-solution p {
